fix(component): prevent word wrapping of tooltip for TextAdvancdFormatting elements
affects: @atlaskit/tooltip

ISSUES CLOSED: ED-380

--- a/packages/tooltip/src/styles.less
+++ b/packages/tooltip/src/styles.less
@@ -29,6 +29,7 @@
   margin: @marginDistance;
   padding: @topAndBottomPadding @leftAndRightTextPadding;
   pointer-events: none;
+  white-space: nowrap;
 }
 
 //************** Animations ***************//
